<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
    android:id="@+id/home"
    android:icon="@drawable/bottom_btn1"
    android:title="@string/home"
    android:background="@color/black"
    />
    <item
        android:id="@+id/explorer"
        android:icon="@drawable/bottom_btn2"
        android:title="@string/explorer"
        android:background="@color/black"
        />
    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/bottom_btn3"
        android:title="@string/bookmark"
        android:background="@color/black"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/bottom_btn4"
        android:title="@string/profile"
        android:background="@color/black"
        />
</menu>