<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#597CAD">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/moss_btn"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/register" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue_guest"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/stroke_golden"
        android:textColor="#50660A"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_gmail_register"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gmail"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/cobalt_btn"
        android:textColor="#ffff"
        android:textSize="20sp"/>

</LinearLayout>
