<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#FDD367"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".activities.LoginActivity">

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginHorizontal="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:textStyle="italic"
            android:inputType="textEmailAddress"
            android:padding="12dp"
      />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field with Toggle -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLayout"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp"
        app:endIconMode="password_toggle"
      >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/inputPassword"
            android:textStyle="italic"
            android:inputType="textPassword"
            android:padding="12dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:padding="5dp"
        android:text="@string/forgot_password"
        android:textColor="#2666C3"
        android:textSize="14sp"
        android:textStyle="bold" />
    <!-- Login Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLayout"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/moss_btn"
        android:text="@string/loginBtn"
        android:textSize="20sp"
        android:textColor="@color/white"/>
</RelativeLayout>
