<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="640dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/background3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-60dp"
                android:background="@drawable/white_corners"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/explore_macedonia"
                    android:textAlignment="center"
                    android:textColor="@color/golden"
                    android:textSize="43sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/subtext"
                    android:textAlignment="center"
                    android:textColor="@color/cobaltBlue"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/stroke_golden"
                    android:text="@string/getStarted"
                    android:textColor="#50660A"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="320dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/moss_btn"
                    android:text="@string/loginBtnNow"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="306dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>
