<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/mainPic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <ImageView
                        android:id="@+id/back_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/half_gold2"
                        android:clickable="true"
                        android:focusable="true"
                        android:elevation="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/back" />


                    <ImageView
                        android:id="@+id/save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/half_gold2"
                        android:clickable="true"
                        android:focusable="true"
                        android:elevation="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/fav_icon" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/picList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_corners2"
                        android:clipToPadding="false"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        app:layout_constraintBottom_toTopOf="@+id/imageView9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">
                    </androidx.recyclerview.widget.RecyclerView>

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/gradient_bg" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="350dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/title_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="24dp"
                        android:text="@string/title"
                        android:textColor="@color/cobaltBlue"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            app:srcCompat="@drawable/location"
                            app:tint="@color/cobaltBlue" />

                        <TextView
                            android:id="@+id/address_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:text="@string/address"
                            android:textColor="@color/cobaltBlue"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:paddingTop="8dp">

                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="@style/Widget.AppCompat.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:indeterminate="false"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:progressTint="@color/golden"
                            android:rating="3"
                            android:scaleX="0.7"
                            android:scaleY="0.7"
                            android:stepSize="0.1"
                            android:transformPivotX="0dp" />

                        <TextView
                            android:id="@+id/rating_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="0"
                            android:textColor="@color/cobaltBlue"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Bottom Description Section -->

            <TextView
                android:id="@+id/description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                android:text="@string/descriptionTitle"
                android:textColor="@color/golden"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/description_txt"
                app:layout_constraintStart_toStartOf="@+id/description_txt"
                tools:layout_editor_absoluteY="501dp" />

            <TextView
                android:id="@+id/description_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_title"
                android:layout_marginHorizontal="24dp"

                android:text="@string/description"
                android:textColor="@color/cobaltBlue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_title" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/mossGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/read_more_btn"
            style="@android:style/Widget.Button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/cobalt_btn"
            android:text="@string/readMore"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
